--- a/templates/base/nav.html
+++ b/templates/base/nav.html
@@ -14,7 +14,7 @@
 
 <header>
   <nav>
-    <p>Book Store</p>
+    <a href="{% url 'home' %}">Book Reviews</a>
     <button type="button" id="menu-button" onclick="handleToggleMenu()">
       <svg
         xmlns="http://www.w3.org/2000/svg"
