--- a/templates/base/book_list.html
+++ b/templates/base/book_list.html
@@ -55,6 +55,7 @@
     </button>
   </div>
 
+  {% if user.is_staff %}
   <div class="create-container">
     <p>Add</p>
     <a href="{% url 'create-book' %}" class="circle-btn">
@@ -76,6 +77,7 @@
       </svg>
     </a>
   </div>
+  {% endif %}
 </div>
 
 <!-- tags -->
@@ -93,7 +95,7 @@
   {% else %}
   <!--  -->
 
-  {% for book in books %}
+  {% for book in page_obj %}
   <!--  -->
   {% if forloop.counter0|divisibleby:"4" %}
   <div class="book-list-row">
@@ -109,11 +111,11 @@
           />
         </div>
         <h2>{{book.title}}</h2>
-        <p>{{book.updated|date:"M d, Y"}}</p>
-        <p>{{book.description}}</p>
+        <!-- <p>{{book.updated|date:"M d, Y"}}</p> -->
+        <p class="truncate">{{book.description}}</p>
         <ul class="book-list-rating">
+          <p class="rating-text">{{book.average_rating}}</p>
           {% for i in rating_list %}
-
           <li>
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -132,7 +134,6 @@
               />
             </svg>
           </li>
-
           {% endfor %}
         </ul>
       </a>
@@ -149,47 +150,35 @@
 </ul>
 
 <div class="pagination">
-  <div>1 - {{book_count}} of {{book_count}} items</div>
+  <div>Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}</div>
   <div class="navigation">
-    <button type="button">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke-width="1.5"
-        stroke="currentColor"
-        class="size-6"
-        width="20"
-        height="20"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          d="M15.75 19.5 8.25 12l7.5-7.5"
-        />
-      </svg>
-    </button>
-    <p>1</p>
-    <p>2</p>
-    <p>3</p>
-    <button type="button">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke-width="1.5"
-        stroke="currentColor"
-        class="size-6"
-        width="20"
-        height="20"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          d="m8.25 4.5 7.5 7.5-7.5 7.5"
-        />
-      </svg>
-    </button>
+    {% if page_obj.has_previous %}
+    <a class="circle-btn" href="?page=1&search={{ request.GET.search }}"
+      >&lt;</a
+    >
+    <a
+      class="circle-btn"
+      href="?page={{ page_obj.previous_page_number }}&search={{ request.GET.search }}"
+      >&lt;</a
+    >
+    {% else %}
+    <span class="circle-btn disabled">&lt;&lt;</span>
+    <span class="circle-btn disabled">&lt; </span>
+    {% endif %} {% if page_obj.has_next %}
+    <a
+      class="circle-btn"
+      href="?page={{ page_obj.next_page_number }}&search={{ request.GET.search }}"
+      >&gt;</a
+    >
+    <a
+      class="circle-btn"
+      href="?page={{ page_obj.paginator.num_pages }}&search={{ request.GET.search }}"
+      >&gt;&gt;</a
+    >
+    {% else %}
+    <span class="circle-btn disabled">&gt;</span>
+    <span class="circle-btn disabled">&gt;&gt;</span>
+    {% endif %}
   </div>
 </div>
 {% endblock content %}
